translations to utilities page

--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -24,6 +24,8 @@ ro:
   right_side:
     our_services: "Serviciile noastre"
     contacts: "Contacte"
+  utilities:
+    utilities: "Utilaje"
   date:
     abbr_day_names:
     - Dum
