--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -24,6 +24,8 @@ ru:
   right_side:
     our_services: "Наши услуги"
     contacts: "Контакты"
+  utilities:
+    utilities: "Техника"
   date:
     abbr_day_names:
     - Вс
