fixed bugs in create client, added gallery page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,6 +34,7 @@ en:
     complete_tasks: "Completed tasks"
     optics: "optic fibers"
     contacts: "contacts"
+    gallery: "Photo Gallery"
   main_page:
     moto: "company with the largest experience in underground drilling in Moldova"
     completed_tasks: "Completed tasks"
