--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,4 +1,5 @@
 ru:
+  home: "На главную"
   menu:
     languages: "язык"
     company: "компания"
@@ -27,6 +28,36 @@ ru:
     contacts: "Контакты"
   utilities:
     utilities: "Техника"
+  footer:
+    about: "О нас"
+    contact_us: "Контакты"
+    street: "улица Юрий Гагарин, 1"
+    country: "Молдова, Яловень"
+    phone: "Телефон:"
+    fax: "Факс:"
+  copyright:
+    rights: "2013 &copy; NCCM GRUP. Все права защищены."
+  gallery:
+    gallery: "Фото Галерея"
+  contacts:
+    contacts: "Контакты"
+    leave_message: "Оставьте нам сообщение"
+    address: "Молдова, Яловень, улица Юрий Гагарин, 1"
+    hours: "Часы работы"
+    days_one: "Понедельник-Пятница"
+    days_two: "Суббота"
+    days_three: "Воскресенье"
+    closed: "Закрыто"
+  calculator_page:
+    calculator: "Калькулятор"
+    iron_pipe: "Металлическая труба"
+    plastic_pipe: "Полиэтиленовая труба"
+    warning: "Внимание"
+    warning_message: "Цены указаны в ознакомительных целях и могут меняться в зависимости от объекта и расстояние до объекта."
+    diameter: "Диаметр"
+    length: "Длина"
+    price: "Цена"
+    total: "Всего"
   date:
     abbr_day_names:
     - Вс
