adde documents resource, upload image to document

--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -58,6 +58,8 @@ ro:
     length: "Lungime"
     price: "Preț"
     total: "Total"
+  docs_page:
+    docs: "Documente"
   date:
     abbr_day_names:
     - Dum
