added team_members resource, added it to admin, design things

--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -60,6 +60,8 @@ ro:
     total: "Total"
   docs_page:
     docs: "Documente"
+  team_page:
+    team: "Echipă"
   date:
     abbr_day_names:
     - Dum
