--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -62,6 +62,9 @@ ro:
     docs: "Documente"
   team_page:
     team: "Echipă"
+  clients:
+    partners: "Parteneri"
+    our_partners: "Partenerii noștri"
   date:
     abbr_day_names:
     - Dum
