--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -62,6 +62,9 @@ ru:
     docs: "Документы"
   team_page:
     team: "Команда"
+  clients:
+    partners: "Партнёры"
+    our_partners: "Наши Партнёры"
   date:
     abbr_day_names:
     - Вс
