--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -15,6 +15,12 @@ ru:
     optics: "ВОЛС"
     contacts: "Контакты"
     gallery: "Фото Галерея"
+  slider:
+    first_title: 'МЕСТОПОЛОЖЕНИЯ и<br /> управление'
+    first_desc: "<i>важная часть процесса бурения,</i> <br /> <i>буровая головка находится под землей в процессе бурения и</i> <br /><i>в большинстве случаев, не видно с поверхности земли.</i>"
+    second_title: "<i>ДЕМО ВИДЕО</i> <br /> <i>как работает</i> <br /> <i>горизонтально-направленного бурения</i>"
+    third_title: "<i>Горизонтально направленное бурение</i> <br /> <i> делает невозможное возможным.</i>"
+    third_desc: "<i>Эта технология экономит время и деньги.</i> <br /> <i> Большая часть поверхности земли остается нетронутой,</i> <br /> <i> уменьшая воздействие на окружающую среду.</i>"
   main_page:
     moto: "Крупнейшая компания с опытом в подземном бурение в Молдове"
     completed_tasks: "Выполненные обьекты"
