--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,24 +1,3 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
   home: "Home"
   menu:
@@ -36,6 +15,12 @@ en:
     optics: "optic fibers"
     contacts: "contacts"
     gallery: "Photo Gallery"
+  slider:
+    first_title: 'Locating &amp; guidance'
+    first_desc: "<i>an important part of the drilling operation,</i> <br /> <i>as the drilling head is under the ground while drilling and,</i> <br /><i>in most cases, not visible from the ground surface.</i>"
+    second_title: "<i>DEMO VIDEO</i> <br /> <i>OF HOW HORIZONTAL</i> <br /> <i>DIRECTIONAL DRILL WORKS </i>"
+    third_title: "<i>Horizontal Directional</i> <br /> <i> Drilling makes the </i> <br /> <i> impossible possible.</i>"
+    third_desc: "<i>This technology saves time and money.</i> <br /> <i> Most of the ground surface remains undisturbed,</i> <br /> <i> lessening the environmental impact of placing pipe.</i>"
   main_page:
     moto: "company with the largest experience in underground drilling in Moldova"
     completed_tasks: "Completed tasks"
